kubernetes/kustomize/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mapaderisco-unilab
  name: mapaderisco-unilab
  annotations:
    metallb.universe.tf/address-pool: int-pool
spec:
  type: LoadBalancer
  loadBalancerIP: 10.130.2.155
  externalTrafficPolicy: Cluster
  ports:
  - name: ssh
    port: 37389
    protocol: TCP
    targetPort: 22
  selector:
    app: mapaderisco-unilab
