kubernetes/kustomize/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapaderisco-unilab
  annotations:
    haproxy.org/rewrite-target: /$1
spec:
  rules:
  - host: mapaderisco-staging.unilab.edu.br
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mapaderisco-unilab
            port:
              number: 80
